# employee_app

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: frappe-semgrep.yml
api-docs/: Untitled 1.yml  add_log_based_on_employee_field.yml  bruno.json  create complaint.yml  create leave application.yml  create_attendence_request.yml  create_expense_claim.yml  create_refresh_token.yml  employee details.yml  generate_token_secure.yml  get employee task details.yml  get employee task.yml  get expense claim type.yml  get task.yml  get todays break.yml  get_attendance_details.yml  get_break_hours.yml  get_employee_data.yml  get_erp_working_hours.yml  get_notification.yml  get_total_hours.yml  leave type.yml  leave_type.yml  mark_notification_as_read.yml  opencollection.yml  qr_code.yml  server_time.yml  shortcut_!.yml  shortcut_1.yml  shortcut_2.yml  shortcut_3.yml  test.yml  upload file.yml  whoami.yml
api-docs/Attendance/: add_log_based_on_employee_field.bru  get_attendance_details.bru  get_break_hours.bru  get_employee_working_hours.bru  get_today_breaks.bru  get_total_hours.bru
api-docs/Authentication/: create_refresh_token.bru  generate_token_secure.bru  whoami.bru
api-docs/Employee/: create_attendance_request.bru  employee_details.bru  get_employee_data.bru  get_shortcut_1.bru  get_shortcut_2.bru  get_shortcut_3.bru  qr_code.bru
api-docs/Leave_Expense/: create_expense_claim.bru  (+3 more)
employee_app/: attendance_api.py  gauth.py  hooks.py  log_type.py  material_request.py  modules.txt  patches.txt  test.py  test_gauth.py  user_qa_code.py
(+60 files in other folders)
