[project]
name = "employee_app"
authors = [
    { name = "ERPGulf.com", email = "support@ERPGulf.com"}
]
description = "Attendance and related submissions through mobile APP"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "opencv-python-headless>=4.10.0.84"
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
